Q2 added separate chaining

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 assignment3/2015CSB1021Output1.txt
 assignment3/2015CSB1021Output1-fast.txt
 assignment3/2015CSB1021Output2.txt
+assignment3/2015CSB1021Output2-fast.txt
