Added readme and renamed fast to chain

--- a/assignment3/Makefile
+++ b/assignment3/Makefile
@@ -1,28 +1,28 @@
-all: q1 q1-fast q2 q2-fast
+all: q1 q1-chain q2 q2-chain
 
 q1: q1.o
 	g++ q1.o -o q1
 
-q1-fast: q1-fast.o
-	g++ q1-fast.o -o q1-fast
+q1-chain: q1-chain.o
+	g++ q1-chain.o -o q1-chain
 
 q2: q2.o
 	g++ q2.o -o q2
 
-q2-fast: q2-fast.o
-	g++ q2-fast.o -o q2-fast
+q2-chain: q2-chain.o
+	g++ q2-chain.o -o q2-chain
 
 q1.o: q1.cpp
 	g++ -c q1.cpp
 
-q1-fast.o: q1-fast.cpp
-	g++ -c q1-fast.cpp
+q1-chain.o: q1-chain.cpp
+	g++ -c q1-chain.cpp
 
 q2.o: q2.cpp
 	g++ -c q2.cpp
 
-q2-fast.o: q2-fast.cpp
-	g++ -c q2-fast.cpp
+q2-chain.o: q2-chain.cpp
+	g++ -c q2-chain.cpp
 
 clean:
-	rm *.o q1 q1-fast q2 q2-fast
+	rm *.o q1 q1-chain q2 q2-chain
