--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,10 @@ assignment3/2015CSB1021Output1-chain.txt
 assignment3/2015CSB1021Output1-optimise.txt
 assignment3/2015CSB1021Output2.txt
 assignment3/2015CSB1021Output2-chain.txt
+assignment3/2015CSB1021Output2-optimise.txt
 assignment3/q1
 assignment3/q1-chain
 assignment3/q1-optimise
 assignment3/q2
 assignment3/q2-chain
+assignment3/q2-optimise
