--- a/assignment3/Makefile
+++ b/assignment3/Makefile
@@ -1,4 +1,4 @@
-all: q1 q1-chain q1-optimise q2 q2-chain q2-optimise
+all: q1 q1-chain q1-extra q2 q2-chain q2-extra
 
 q1: q1.o
 	g++ q1.o -o q1
@@ -6,8 +6,8 @@ q1: q1.o
 q1-chain: q1-chain.o
 	g++ q1-chain.o -o q1-chain
 
-q1-optimise: q1-optimise.o
-	g++ q1-optimise.o -o q1-optimise
+q1-extra: q1-extra.o
+	g++ q1-extra.o -o q1-extra
 
 q2: q2.o
 	g++ q2.o -o q2
@@ -15,8 +15,8 @@ q2: q2.o
 q2-chain: q2-chain.o
 	g++ q2-chain.o -o q2-chain
 
-q2-optimise: q2-optimise.o
-	g++ q2-optimise.o -o q2-optimise
+q2-extra: q2-extra.o
+	g++ q2-extra.o -o q2-extra
 
 q1.o: q1.cpp
 	g++ -c q1.cpp
@@ -24,8 +24,8 @@ q1.o: q1.cpp
 q1-chain.o: q1-chain.cpp
 	g++ -c q1-chain.cpp
 
-q1-optimise.o: q1-optimise.cpp
-	g++ -c q1-optimise.cpp
+q1-extra.o: q1-extra.cpp
+	g++ -c q1-extra.cpp
 
 q2.o: q2.cpp
 	g++ -c q2.cpp
@@ -33,8 +33,8 @@ q2.o: q2.cpp
 q2-chain.o: q2-chain.cpp
 	g++ -c q2-chain.cpp
 
-q2-optimise.o: q2-optimise.cpp
-	g++ -c q2-optimise.cpp
+q2-extra.o: q2-extra.cpp
+	g++ -c q2-extra.cpp
 
 clean:
-	rm *.o q1 q1-chain q1-optimise q2 q2-chain q2-optimise
+	rm *.o q1 q1-chain q1-extra q2 q2-chain q2-extra
