--- a/.gitignore
+++ b/.gitignore
@@ -29,13 +29,13 @@
 *.app
 assignment3/2015CSB1021Output1.txt
 assignment3/2015CSB1021Output1-chain.txt
-assignment3/2015CSB1021Output1-optimise.txt
+assignment3/2015CSB1021Output1-extra.txt
 assignment3/2015CSB1021Output2.txt
 assignment3/2015CSB1021Output2-chain.txt
-assignment3/2015CSB1021Output2-optimise.txt
+assignment3/2015CSB1021Output2-extra.txt
 assignment3/q1
 assignment3/q1-chain
-assignment3/q1-optimise
+assignment3/q1-extra
 assignment3/q2
 assignment3/q2-chain
-assignment3/q2-optimise
+assignment3/q2-extra
