Removing q1-extra q2-extra

--- a/assignment3/interpretation2/Makefile
+++ b/assignment3/interpretation2/Makefile
@@ -1,4 +1,4 @@
-all: q1 q1-chain q1-extra q2 q2-chain q2-extra
+all: q1 q1-chain q2 q2-chain
 
 q1: q1.o
 	g++ q1.o -o q1
@@ -6,17 +6,11 @@ q1: q1.o
 q1-chain: q1-chain.o
 	g++ q1-chain.o -o q1-chain
 
-q1-extra: q1-extra.o
-	g++ q1-extra.o -o q1-extra
-
 q2: q2.o
 	g++ q2.o -o q2
 
 q2-chain: q2-chain.o
 	g++ q2-chain.o -o q2-chain
-
-q2-extra: q2-extra.o
-	g++ q2-extra.o -o q2-extra
 
 q1.o: q1.cpp
 	g++ -c q1.cpp
@@ -24,17 +18,11 @@ q1.o: q1.cpp
 q1-chain.o: q1-chain.cpp
 	g++ -c q1-chain.cpp
 
-q1-extra.o: q1-extra.cpp
-	g++ -c q1-extra.cpp
-
 q2.o: q2.cpp
 	g++ -c q2.cpp
 
 q2-chain.o: q2-chain.cpp
 	g++ -c q2-chain.cpp
 
-q2-extra.o: q2-extra.cpp
-	g++ -c q2-extra.cpp
-
 clean:
-	rm *.o q1 q1-chain q1-extra q2 q2-chain q2-extra
+	rm *.o q1 q1-chain q2 q2-chain
