--- a/assignment3/interpretation2/Makefile
+++ b/assignment3/interpretation2/Makefile
@@ -1,4 +1,4 @@
-all: q1 q1-chain q2 q2-chain
+all: q1 q1-chain q2 q2-chain q2-mult-input q2-mult-input-chain
 
 q1: q1.o
 	g++ q1.o -o q1
@@ -12,6 +12,12 @@ q2: q2.o
 q2-chain: q2-chain.o
 	g++ q2-chain.o -o q2-chain
 
+q2-mult-input: q2-mult-input.o
+	g++ q2-mult-input.o -o q2-mult-input
+
+q2-mult-input-chain: q2-mult-input-chain.o
+	g++ q2-mult-input-chain.o -o q2-mult-input-chain
+
 q1.o: q1.cpp
 	g++ -c q1.cpp
 
@@ -24,5 +30,11 @@ q2.o: q2.cpp
 q2-chain.o: q2-chain.cpp
 	g++ -c q2-chain.cpp
 
+q2-mult-input.o: q2-mult-input.cpp
+	g++ -c q2-mult-input.cpp
+
+q2-mult-input-chain.o: q2-mult-input-chain.cpp
+	g++ -c q2-mult-input-chain.cpp
+
 clean:
-	rm *.o q1 q1-chain q2 q2-chain
+	rm *.o q1 q1-chain q2 q2-chain q2-mult-input q2-mult-input-chain
