--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ assignment3/interpretation2/q2
 assignment3/interpretation2/q2-chain
 assignment3/interpretation2/q2-mult-input
 assignment3/interpretation2/q2-mult-input-chain
+
+assignment4/q1
+assignment4/q2
+assignment4/q3
