Splitting in files

--- a/assignment5/Makefile
+++ b/assignment5/Makefile
@@ -1,9 +1,9 @@
 all: main
 
-main: main.o
+main: main.o Graph.h
 	g++ main.o -o main
 
-main.o: main.cpp
+main.o: main.cpp Graph.h
 	g++ -c main.cpp
 
 clean:
